syntax = "proto3";
package kepler.executors;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/dittonetwork/kepler/x/executors/types";

// Executor defines the structure for an executor.
message Executor {
  // Cosmos address (e.g., bech32).
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Owner's address (e.g., staker address).
  string owner_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Is the executor active or not.
  bool is_active = 3;
  // Public key of the executor.
  string public_key = 4;
  // Creation timestamp (Unix time).
  int64 created_at = 5;
}
